syntax = "proto3";
package grpcServer;
option go_package = "./ChunkPb";

service Chunk {
  rpc send(ChunkRequest) returns (ChunkResponse) {}
}

message ChunkRequest{
  string sha256 = 1;
  int32  id = 2;
  int32  size = 3;
  string data = 4;
}

message ChunkResponse{
  bool   receive = 1;
}